services.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-ns

---
apiVersion: v1
kind: Service
metadata:
  name: users-frontend-svca-adfasdfasdfasdfasdfasdfasdfasdfasd
  namespace: user-ns
spec:
  type: NodePort
  selector:
    app: users-frontend
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 31001

---
apiVersion: v1
kind: Namespace
metadata:
  name: admin-ns

---
apiVersion: v1
kind: Service
metadata:
  name: admin-frontend-svc
  namespace: admin-ns
spec:
  type: NodePort
  selector:
    app: admin-frontend
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 31002

---
apiVersion: v1
kind: Namespace
metadata:
  name: backend-ns

---
apiVersion: v1
kind: Service
metadata:
  name: users-backend-svc
  namespace: backend-ns
spec:
  type: NodePort
  selector:
    app: users-backend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31003

---
apiVersion: v1
kind: Namespace
metadata:
  name: admin-backend-ns

---
apiVersion: v1
kind: Service
metadata:
  name: admin-backend-svc
  namespace: admin-backend-ns
spec:
  type: NodePort
  selector:
    app: admin-backend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31004
---
apiVersion: v1
kind: Namespace
metadata:
  name: udp-ns1

---
apiVersion: v1
kind: Service
metadata:
  name: udp-service-1
  namespace: udp-ns1
spec:
  type: NodePort
  selector:
    app: dummy-app-1
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 32001
      protocol: UDP

---
apiVersion: v1
kind: Namespace
metadata:
  name: udp-ns2

---
apiVersion: v1
kind: Service
metadata:
  name: udp-service-2
  namespace: udp-ns2
spec:
  type: NodePort
  selector:
    app: dummy-app-2
  ports:
    - port: 5001
      targetPort: 5001
      nodePort: 32002
      protocol: UDP

---
apiVersion: v1
kind: Namespace
metadata:
  name: udp-ns3

---
apiVersion: v1
kind: Service
metadata:
  name: udp-service-3
  namespace: udp-ns3
spec:
  type: NodePort
  selector:
    app: dummy-app-3
  ports:
    - port: 5002
      targetPort: 5002
      nodePort: 32003
      protocol: UDP

---
apiVersion: v1
kind: Namespace
metadata:
  name: udp-ns4

---
apiVersion: v1
kind: Service
metadata:
  name: udp-service-4
  namespace: udp-ns4
spec:
  type: NodePort
  selector:
    app: dummy-app-4
  ports:
    - port: 5003
      targetPort: 5003
      nodePort: 32004
      protocol: UDP
