ingress-deneme.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-namespace-1
  namespace: namespace-1
spec:
  rules:
  - host: "namespace1.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-1
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-1
  namespace: namespace-1
spec:
  selector:
    app: pod-1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-a-really-long-name-that-exceeds-normal-length-1
  namespace: namespace-1
  labels:
    app: pod-1
spec:
  containers:
  - name: container-1
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-a-really-long-name-that-exceeds-normal-length-2
  namespace: namespace-1
  labels:
    app: pod-1
spec:
  containers:
  - name: container-2
    image: nginx:latest
---
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-namespace-2
  namespace: namespace-2
spec:
  rules:
  - host: "namespace2.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-2
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-2
  namespace: namespace-2
spec:
  selector:
    app: pod-2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-another-long-name-that-exceeds-normal-length-1
  namespace: namespace-2
  labels:
    app: pod-2
spec:
  containers:
  - name: container-1
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-another-long-name-that-exceeds-normal-length-2
  namespace: namespace-2
  labels:
    app: pod-2
spec:
  containers:
  - name: container-2
    image: nginx:latest
---
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-namespace-3
  namespace: namespace-3
spec:
  rules:
  - host: "namespace3.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-3
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-3
  namespace: namespace-3
spec:
  selector:
    app: pod-3
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-a-third-long-name-that-exceeds-normal-length-1
  namespace: namespace-3
  labels:
    app: pod-3
spec:
  containers:
  - name: container-1
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-a-third-long-name-that-exceeds-normal-length-2
  namespace: namespace-3
  labels:
    app: pod-3
spec:
  containers:
  - name: container-2
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-short
  namespace: namespace-3
  labels:
    app: pod-3
spec:
  containers:
  - name: container-2
    image: nginx:latest
